# agent-canary

./: .env.example  .gitignore  README.md  docker-compose.yml
apps/backend/: .dockerignore  Dockerfile  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 0001_create_foundation_tables.py  0002_create_tool_definitions.py  0003_create_policy_tables.py  0004_create_test_run_steps.py  0005_create_evaluation_results.py  0006_create_approval_requests.py  0007_create_rag_tables.py  0008_phase_thirteen_extensions.py
apps/backend/src/agent_canary/: main.py
apps/backend/src/agent_canary/api/: router.py
apps/backend/src/agent_canary/core/: config.py
apps/backend/src/agent_canary/db/: base.py  session.py
apps/backend/src/agent_canary/embeddings/: __init__.py  base.py  exceptions.py  factory.py  gemini.py  mock.py  openai.py
apps/backend/src/agent_canary/llm/: __init__.py  base.py  exceptions.py  factory.py  gemini.py  groq.py  mock.py  openai.py  openai_compatible.py  parsing.py
apps/backend/src/agent_canary/models/: __init__.py  approval_request.py  audit_log.py  base.py  document_ingestion_job.py  evaluation_result.py  llm_call.py  policy_rule.py  project.py  (+10 more)
apps/backend/tests/: conftest.py  test_approvals.py  test_audit_logs_api.py  test_chunking.py  test_embeddings.py  test_evaluation_metrics.py  test_evaluation_workflow.py  test_health.py  test_llm_provider.py  test_models_metadata.py  test_phase_two_api.py  test_policy_engine.py  test_rag_failure_evaluation.py  test_rag_pipeline.py  test_scoring_engine.py  test_tool_registry.py
(+92 files in other folders)
