[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-canary-backend"
version = "0.1.0"
description = "FastAPI backend foundation for Agent Canary."
readme = { text = "FastAPI backend foundation for Agent Canary.", content-type = "text/markdown" }
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13.2",
    "fastapi>=0.115.0",
    "httpx>=0.27.2",
    "jsonschema>=4.23.0",
    "langgraph>=0.2.60",
    "psycopg[binary]>=3.2.1",
    "pydantic-settings>=2.4.0",
    "sqlalchemy>=2.0.32",
    "uvicorn[standard]>=0.30.6",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.11.2",
    "pytest>=8.3.2",
    "ruff>=0.6.8",
    "types-jsonschema>=4.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agent_canary"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
plugins = ["sqlalchemy.ext.mypy.plugin"]
strict = true
warn_unreachable = true
